--- a/index.css
+++ b/index.css
@@ -2,7 +2,22 @@ h1 {
   text-align: center;
 }
 
-main div h2,
-main div p{
-  font-style:italic;
+main div
+{
+  height: 30px;
+  text-align: center;
+  font-style: italic;
+}
+
+p {
+  height: 20px;
+  font-family: "Times New Roman", Times, serif;
+
+}
+
+footer {
+  hight: 25px;
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
